# proj-vision-term-kosmos

./: .gitignore  README.md  config.sh.example  pyproject.toml  run.sh
scripts/: record_menu.py
src/vision_terminal/: __init__.py  cli_ui.py  main.py  menu.py  processor.py
src/vtermkosmos/: __init__.py  cli_ui.py  main.py  menu.py  processor.py
