[project]
name = "vision-terminal"
version = "0.1.0"
description = "VisionTerminal - Robust CLI tool for fast image and video processing."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Helton Maia", email = "helton.maia@ufrn.br" },
]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "opencv-python>=4.9.0",
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "pyfiglet>=1.0.2",
]

[project.scripts]
vterm = "vision_terminal.main:app"
vision-terminal = "vision_terminal.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_terminal"]

[tool.uv]
dev-dependencies = []
